@@ -1,3 +1,3 @@
-include_HEADERS = qop.h
+include_HEADERS = qop.h qop_qdp.h
 
 EXTRA_DIST = qop_internal.h
