@@ -4,6 +4,7 @@ lib_LIBRARIES = libqopqdp_common.a libqopqdp_f.a libqopqdp_d.a
 
 LIBCOMMONSOURCE = \
   ../include/qop.h \
+  ../include/qop_qdp.h \
   ../include/qop_internal.h \
   common.c \
   asqtad.c \
@@ -11,6 +12,7 @@ LIBCOMMONSOURCE = \
 
 LIBPSOURCE = \
   ../include/qop.h \
+  ../include/qop_qdp.h \
   ../include/qop_internal.h \
   asqtadp.c \
   wilsonp.c
